[gd_scene load_steps=4 format=3 uid="uid://b0ko42f0x5uq4"]

[ext_resource type="Texture2D" uid="uid://bekbvaeey7tlt" path="res://EuBraBo/Sprites/taleMaps/TilemapDaLoja_2.png" id="1_00y7r"]
[ext_resource type="Script" path="res://EuBraBo/Script/Objeto/prateleiras.gd" id="1_syp73"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80qjp"]
size = Vector2(32, 32)

[node name="Prateleiras" type="RigidBody2D" groups=["objetes"]]
collision_layer = 2
collision_mask = 12
gravity_scale = 0.0
script = ExtResource("1_syp73")

[node name="colcao" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_80qjp")

[node name="pratileiraCompleta" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 5)
texture = ExtResource("1_00y7r")
region_enabled = true
region_rect = Rect2(48, 0, 32, 40)

[node name="pratileiraMeia" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 1)
texture = ExtResource("1_00y7r")
region_enabled = true
region_rect = Rect2(48, 48, 32, 32)

[node name="pratileiraVasia" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 1)
texture = ExtResource("1_00y7r")
region_enabled = true
region_rect = Rect2(80, 48, 32, 32)
